--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,8 +1,11 @@
-//***vdoing主题-CSS变量***//
+//***vdoing主题-样式变量（你可以修改这些变量值以覆盖主题使用的样式变量）***//
+
+// 以下注释的变量仅供参考，主题使用的最新变量请查看：https://github.com/xugaoyi/vuepress-theme-vdoing/blob/master/theme-vdoing/styles/palette.styl
 
 // 颜色
-$bannerTextColor = #fff // 首页banner区(博客标题区)的文本颜色
-$accentColor = #11A8CD
+
+$bannerTextColor = #fff // 首页banner区(博客标题)文本颜色
+$accentColor = #11A8CD // 主题色
 $activeColor = #ff5722
 $arrowBgColor = #ccc
 
@@ -29,7 +32,7 @@ $lineNumbersWrapperWidth = 2.5rem
   --codeBg: #f6f6f6
   --codeColor: #525252
   codeThemeLight()
-  // 代码块深色主题
+  // // 代码块深色主题
   // --codeBg: #252526
   // --codeColor: #fff
   // codeThemeDark()
